src/co/edu/javeriana/interpreter/antlr/LenguajeParser.java
// $ANTLR 3.4 /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g 2014-07-19 23:33:24

package co.edu.javeriana.interpreter.antlr;
import co.edu.javeriana.interpreter.*;
import evaluators.*;  


import conte.Context1; 
import conte.IntegerStatement;
import conte.Statement1;
import java.util.Stack;
import java.io.BufferedReader;
import java.io.IOException;
import java.io.InputStreamReader;
import java.util.HashMap; 


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class LenguajeParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASIGNACION", "COMENTARIO", "COMILLASD", "COMILLASS", "DOBLE", "ELSE", "ELSEIF", "FOR", "FUNCTION", "IF", "LLAVE_D", "LLAVE_I", "NEWLINE", "NOMBRE", "NUMERO", "PARENTESIS_D", "PARENTESIS_I", "PC", "PRINT", "READ", "TEXTO", "TOKEN", "WHILE", "WS", "'!='", "'&&'", "'*'", "'+'", "','", "'-'", "'.get('", "'.push('", "'/'", "'<'", "'<='", "'=='", "'>'", "'>='", "'list'", "'return'", "'var'", "'||'"
    };

    public static final int EOF=-1;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int ASIGNACION=4;
    public static final int COMENTARIO=5;
    public static final int COMILLASD=6;
    public static final int COMILLASS=7;
    public static final int DOBLE=8;
    public static final int ELSE=9;
    public static final int ELSEIF=10;
    public static final int FOR=11;
    public static final int FUNCTION=12;
    public static final int IF=13;
    public static final int LLAVE_D=14;
    public static final int LLAVE_I=15;
    public static final int NEWLINE=16;
    public static final int NOMBRE=17;
    public static final int NUMERO=18;
    public static final int PARENTESIS_D=19;
    public static final int PARENTESIS_I=20;
    public static final int PC=21;
    public static final int PRINT=22;
    public static final int READ=23;
    public static final int TEXTO=24;
    public static final int TOKEN=25;
    public static final int WHILE=26;
    public static final int WS=27;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public LenguajeParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public LenguajeParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return LenguajeParser.tokenNames; }
    public String getGrammarFileName() { return "/home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g"; }


    Context1 contexto = new Context1(); 
    boolean bandera = true;
    ArrayList<Context1> pila = new ArrayList<Context1>();
    public HashMap<String, Evaluator> funciones = new HashMap<String, Evaluator>();




    // $ANTLR start "programa"
    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:37:1: programa returns [StringBuilder output] : ( print1 | asignacion | ifstatement | lectura | comentario | whilestatemet | funcion | llamadofuncion PC | declaracion | declaracion2 | declaracion_lista | push | forstatemet )+ ;
    public final StringBuilder programa() throws RecognitionException {
        StringBuilder output = null;


        Evaluator print11 =null;

        Evaluator asignacion2 =null;

        Evaluator ifstatement3 =null;

        Evaluator lectura4 =null;

        Evaluator whilestatemet5 =null;

        Evaluator llamadofuncion6 =null;

        Evaluator declaracion7 =null;

        Evaluator declaracion28 =null;

        Evaluator declaracion_lista9 =null;

        Evaluator push10 =null;

        Evaluator forstatemet11 =null;


        try {
            // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:38:3: ( ( print1 | asignacion | ifstatement | lectura | comentario | whilestatemet | funcion | llamadofuncion PC | declaracion | declaracion2 | declaracion_lista | push | forstatemet )+ )
            // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:40:3: ( print1 | asignacion | ifstatement | lectura | comentario | whilestatemet | funcion | llamadofuncion PC | declaracion | declaracion2 | declaracion_lista | push | forstatemet )+
            {

               pila.add(new Context1()); 
               output = new StringBuilder();
              

            // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:44:3: ( print1 | asignacion | ifstatement | lectura | comentario | whilestatemet | funcion | llamadofuncion PC | declaracion | declaracion2 | declaracion_lista | push | forstatemet )+
            int cnt1=0;
            loop1:
            do {
                int alt1=14;
                switch ( input.LA(1) ) {
                case PRINT:
                    {
                    alt1=1;
                    }
                    break;
                case NOMBRE:
                    {
                    switch ( input.LA(2) ) {
                    case ASIGNACION:
                        {
                        alt1=2;
                        }
                        break;
                    case 35:
                        {
                        alt1=12;
                        }
                        break;
                    case PARENTESIS_I:
                        {
                        alt1=8;
                        }
                        break;

                    }

                    }
                    break;
                case IF:
                    {
                    alt1=3;
                    }
                    break;
                case READ:
                    {
                    alt1=4;
                    }
                    break;
                case COMENTARIO:
                    {
                    alt1=5;
                    }
                    break;
                case WHILE:
                    {
                    alt1=6;
                    }
                    break;
                case FUNCTION:
                    {
                    alt1=7;
                    }
                    break;
                case 44:
                    {
                    int LA1_9 = input.LA(2);

                    if ( (LA1_9==NOMBRE) ) {
                        int LA1_15 = input.LA(3);

                        if ( (LA1_15==ASIGNACION) ) {
                            alt1=9;
                        }
                        else if ( (LA1_15==PC) ) {
                            alt1=10;
                        }


                    }


                    }
                    break;
                case 42:
                    {
                    alt1=11;
                    }
                    break;
                case FOR:
                    {
                    alt1=13;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:45:5: print1
            	    {
            	    pushFollow(FOLLOW_print1_in_programa71);
            	    print11=print1();

            	    state._fsp--;


            	    output.append((String)print11.evaluate(pila));

            	    }
            	    break;
            	case 2 :
            	    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:46:7: asignacion
            	    {
            	    pushFollow(FOLLOW_asignacion_in_programa93);
            	    asignacion2=asignacion();

            	    state._fsp--;


            	    asignacion2.evaluate(pila);

            	    }
            	    break;
            	case 3 :
            	    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:47:7: ifstatement
            	    {
            	    pushFollow(FOLLOW_ifstatement_in_programa109);
            	    ifstatement3=ifstatement();

            	    state._fsp--;


            	    ifstatement3.evaluate(pila);

            	    }
            	    break;
            	case 4 :
            	    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:48:7: lectura
            	    {
            	    pushFollow(FOLLOW_lectura_in_programa124);
            	    lectura4=lectura();

            	    state._fsp--;


            	    lectura4.evaluate(pila);

            	    }
            	    break;
            	case 5 :
            	    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:49:7: comentario
            	    {
            	    pushFollow(FOLLOW_comentario_in_programa143);
            	    comentario();

            	    state._fsp--;


            	    }
            	    break;
            	case 6 :
            	    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:50:7: whilestatemet
            	    {
            	    pushFollow(FOLLOW_whilestatemet_in_programa151);
            	    whilestatemet5=whilestatemet();

            	    state._fsp--;


            	    output.append((String)whilestatemet5.evaluate(pila));

            	    }
            	    break;
            	case 7 :
            	    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:51:7: funcion
            	    {
            	    pushFollow(FOLLOW_funcion_in_programa164);
            	    funcion();

            	    state._fsp--;


            	    }
            	    break;
            	case 8 :
            	    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:52:7: llamadofuncion PC
            	    {
            	    pushFollow(FOLLOW_llamadofuncion_in_programa172);
            	    llamadofuncion6=llamadofuncion();

            	    state._fsp--;


            	    llamadofuncion6.evaluate(pila);

            	    match(input,PC,FOLLOW_PC_in_programa178); 

            	    }
            	    break;
            	case 9 :
            	    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:53:7: declaracion
            	    {
            	    pushFollow(FOLLOW_declaracion_in_programa186);
            	    declaracion7=declaracion();

            	    state._fsp--;


            	    declaracion7.evaluate(pila);

            	    }
            	    break;
            	case 10 :
            	    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:54:7: declaracion2
            	    {
            	    pushFollow(FOLLOW_declaracion2_in_programa201);
            	    declaracion28=declaracion2();

            	    state._fsp--;


            	    declaracion28.evaluate(pila);

            	    }
            	    break;
            	case 11 :
            	    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:55:7: declaracion_lista
            	    {
            	    pushFollow(FOLLOW_declaracion_lista_in_programa215);
            	    declaracion_lista9=declaracion_lista();

            	    state._fsp--;


            	    declaracion_lista9.evaluate(pila);

            	    }
            	    break;
            	case 12 :
            	    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:56:7: push
            	    {
            	    pushFollow(FOLLOW_push_in_programa224);
            	    push10=push();

            	    state._fsp--;


            	    push10.evaluate(pila);

            	    }
            	    break;
            	case 13 :
            	    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:57:7: forstatemet
            	    {
            	    pushFollow(FOLLOW_forstatemet_in_programa246);
            	    forstatemet11=forstatemet();

            	    state._fsp--;


            	    output.append((String)forstatemet11.evaluate(pila));

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return output;
    }
    // $ANTLR end "programa"



    // $ANTLR start "return1"
    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:66:3: return1 returns [Evaluator e] : 'return' te= evaluator PC ;
    public final Evaluator return1() throws RecognitionException {
        Evaluator e = null;


        Evaluator te =null;


        try {
            // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:67:3: ( 'return' te= evaluator PC )
            // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:68:5: 'return' te= evaluator PC
            {
            match(input,43,FOLLOW_43_in_return1301); 

            pushFollow(FOLLOW_evaluator_in_return1307);
            te=evaluator();

            state._fsp--;



                  e = new ReturnEvaluator(te); 
                

            match(input,PC,FOLLOW_PC_in_return1314); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return e;
    }
    // $ANTLR end "return1"



    // $ANTLR start "funcion"
    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:76:3: funcion returns [Evaluator e] : FUNCTION nom= NOMBRE '(' ( ( 'var' nom1= NOMBRE ) ( ',' 'var' nom1= NOMBRE )* )? ')' '{' (wh= whilestatements )* '}' ;
    public final Evaluator funcion() throws RecognitionException {
        Evaluator e = null;


        Token nom=null;
        Token nom1=null;
        Evaluator wh =null;


        try {
            // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:77:3: ( FUNCTION nom= NOMBRE '(' ( ( 'var' nom1= NOMBRE ) ( ',' 'var' nom1= NOMBRE )* )? ')' '{' (wh= whilestatements )* '}' )
            // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:78:3: FUNCTION nom= NOMBRE '(' ( ( 'var' nom1= NOMBRE ) ( ',' 'var' nom1= NOMBRE )* )? ')' '{' (wh= whilestatements )* '}'
            {
            e = new FuncionEvaluator();

            match(input,FUNCTION,FOLLOW_FUNCTION_in_funcion348); 

            nom=(Token)match(input,NOMBRE,FOLLOW_NOMBRE_in_funcion354); 

            match(input,PARENTESIS_I,FOLLOW_PARENTESIS_I_in_funcion356); 

            // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:81:2: ( ( 'var' nom1= NOMBRE ) ( ',' 'var' nom1= NOMBRE )* )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==44) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:81:3: ( 'var' nom1= NOMBRE ) ( ',' 'var' nom1= NOMBRE )*
                    {
                    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:81:3: ( 'var' nom1= NOMBRE )
                    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:82:4: 'var' nom1= NOMBRE
                    {
                    match(input,44,FOLLOW_44_in_funcion368); 

                    nom1=(Token)match(input,NOMBRE,FOLLOW_NOMBRE_in_funcion374); 


                    	     ((FuncionEvaluator) e).aregarParametro((nom1!=null?nom1.getText():null));   
                    	  

                    }


                    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:87:2: ( ',' 'var' nom1= NOMBRE )*
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==32) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:88:5: ',' 'var' nom1= NOMBRE
                    	    {
                    	    match(input,32,FOLLOW_32_in_funcion391); 

                    	    match(input,44,FOLLOW_44_in_funcion393); 

                    	    nom1=(Token)match(input,NOMBRE,FOLLOW_NOMBRE_in_funcion399); 


                    	           ((FuncionEvaluator) e).aregarParametro((nom1!=null?nom1.getText():null));   
                    	        

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    }
                    break;

            }


            match(input,PARENTESIS_D,FOLLOW_PARENTESIS_D_in_funcion417); 

            match(input,LLAVE_I,FOLLOW_LLAVE_I_in_funcion420); 

            // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:97:4: (wh= whilestatements )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==COMENTARIO||LA4_0==FOR||LA4_0==IF||LA4_0==NOMBRE||(LA4_0 >= PRINT && LA4_0 <= READ)||LA4_0==WHILE||(LA4_0 >= 42 && LA4_0 <= 44)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:97:5: wh= whilestatements
            	    {
            	    pushFollow(FOLLOW_whilestatements_in_funcion434);
            	    wh=whilestatements();

            	    state._fsp--;



            	     
            	         ((FuncionEvaluator) e).add(wh);   
            	         

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            match(input,LLAVE_D,FOLLOW_LLAVE_D_in_funcion446); 

            funciones.put((nom!=null?nom.getText():null), e);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return e;
    }
    // $ANTLR end "funcion"



    // $ANTLR start "declaracion"
    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:111:1: declaracion returns [Evaluator e] : 'var' nom= NOMBRE ASIGNACION ev= evaluator PC ;
    public final Evaluator declaracion() throws RecognitionException {
        Evaluator e = null;


        Token nom=null;
        Evaluator ev =null;


        try {
            // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:112:3: ( 'var' nom= NOMBRE ASIGNACION ev= evaluator PC )
            // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:113:3: 'var' nom= NOMBRE ASIGNACION ev= evaluator PC
            {
            match(input,44,FOLLOW_44_in_declaracion478); 

            nom=(Token)match(input,NOMBRE,FOLLOW_NOMBRE_in_declaracion482); 

            match(input,ASIGNACION,FOLLOW_ASIGNACION_in_declaracion484); 

            pushFollow(FOLLOW_evaluator_in_declaracion490);
            ev=evaluator();

            state._fsp--;



                                              if(bandera)
                                                {
                                              		  //System.out.println("intento salvar");
                                              		  e = new DeclaracionEvaluator((nom!=null?nom.getText():null),ev);   
                                          			
                                              			
                                              	}
                                             

            match(input,PC,FOLLOW_PC_in_declaracion561); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return e;
    }
    // $ANTLR end "declaracion"



    // $ANTLR start "declaracion2"
    // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:126:3: declaracion2 returns [Evaluator e] : 'var' nom= NOMBRE PC ;
    public final Evaluator declaracion2() throws RecognitionException {
        Evaluator e = null;


        Token nom=null;

        try {
            // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:127:3: ( 'var' nom= NOMBRE PC )
            // /home/alfredo/Documents/github/spanish_programming_language/src/Lenguaje.g:128:3: 'var' nom= NOMBRE PC
            {
            match(input,44,FOLLOW_44_in_declaracion2585); 

            nom=(Token)match(input,NOMBRE,FOLLOW_NOMBRE_in_declaracion2589); 

